--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Углик_IТШI-19-2_ПЗ№2</title>
+	<title>Мой первый сайт</title>
   <link rel="shortcut icon" href="images/books.ico" type="image/x-icon">
   <link rel="stylesheet" href="styles/style.css" />
   <link rel="stylesheet" href="styles/button.css" />
@@ -62,7 +62,7 @@
 <details align="center">
 <table border = 1; align = center>
 <caption><h1>Личные данные:</h1></caption>
-  <tr id="box1" onMouseover="changeTo(id);" onMouseout="changeBack(id);"><td>ФИО:</td><td>Углик Ростислав Сергеевич</td></tr>
+  <tr id="box1" onMouseover="changeTo(id);" onMouseout="changeBack(id);"><td>ФИО:</td><td>Ростислав</td></tr>
   <tr id="box2" onMouseover="changeTo(id);" onMouseout="changeBack(id);"><td>Пол:</td><td>Мужской</td></tr>
   <tr id="box3" onMouseover="changeTo(id);" onMouseout="changeBack(id);"><td>Дата рождения:</td><td>16 сентября</td></tr>
   <tr id="box4" onMouseover="changeTo(id);" onMouseout="changeBack(id);"><td>Место рождения:</td><td>Харьков</td></tr>
@@ -70,7 +70,7 @@
   <tr id="box6" onMouseover="changeTo(id);" onMouseout="changeBack(id);"><td>Семейный статус:</td><td>нет</td></tr>
   <tr id="box7" onMouseover="changeTo(id);" onMouseout="changeBack(id);"><td>Домашний адрес:</td><td>Харьков</td></tr>
   <tr id="box8" onMouseover="changeTo(id);" onMouseout="changeBack(id);"><td>Телефон:</td><td>+3806884258625</td></tr>
-  <tr id="box9" onMouseover="changeTo(id);" onMouseout="changeBack(id);"><td>Email:</td><td>rost201541@gmail.com</td></tr>
+  <tr id="box9" onMouseover="changeTo(id);" onMouseout="changeBack(id);"><td>Email:</td><td>super.zombi.yt@gmail.com</td></tr>
   </tr>
 </table>
 </details>
